# Gamepp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  DrawRectComponent.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  README.md  Scene.cpp  Scene.h
.github/workflows/: docker-image.yml
Boost_tests/: CMakeLists.txt  Vector2.cpp
Debug/: Debug.cpp  Debug.h
EngineCore/: Component.cpp  Component.h  ComponentType.h  DrawRectComponent.cpp  DrawRectComponent.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h
exampleGame/: ExampleObject.cpp  ExampleObject.h  ExampleScene.cpp  ExampleScene.h  main.cpp
include/EngineCore/: Component.h  Debug.h  DrawRectComponent.h  Game.h  GameObject.h  Scene.h  Time.h  Transform.h  Vector2.h
include/utils/: ErrorsEnum.h
src/EngineCore/: Component.cpp  Debug.cpp  DrawRectComponent.cpp  Game.cpp  GameObject.cpp  Scene.cpp  Time.cpp  Transform.cpp  Vector2.cpp
utils/: Parameters.h
